--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,8 @@ jobs:
         run: ./mvnw clean install -B -q -DskipITs=true
       - name: Codecov
         uses: codecov/codecov-action@v5.5.2
+        with:
+          token: ${{  secrets.CODECOV_TOKEN  }}
       - name: Upload test report for sdk
         uses: actions/upload-artifact@v6
         with:
