adding spring-data-6 and spring-boot-4-starters
Signed-off-by: salaboy <Salaboy@gmail.com>

--- a/dapr-spring/dapr-spring-6-data/pom.xml
+++ b/dapr-spring/dapr-spring-6-data/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -11,15 +11,34 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>dapr-spring-data</artifactId>
-  <name>dapr-spring-data</name>
-  <description>Dapr Spring Data</description>
-  <packaging>jar</packaging>
+  <artifactId>dapr-spring-6-data</artifactId>
+
+  <properties>
+    <springboot4.version>4.0.2</springboot4.version>
+    <!-- Override JUnit version to align with Spring Boot 4.0.2 -->
+    <junit-bom.version>6.0.2</junit-bom.version>
+  </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${springboot4.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-keyvalue</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-commons</artifactId>
     </dependency>
     <dependency>
       <groupId>io.dapr</groupId>
@@ -35,4 +54,5 @@
       </plugin>
     </plugins>
   </build>
+
 </project>
