--- a/spring-boot-4-examples/workflows/multi-app/worker-one/pom.xml
+++ b/spring-boot-4-examples/workflows/multi-app/worker-one/pom.xml
@@ -5,16 +5,21 @@
 
   <parent>
     <groupId>io.dapr</groupId>
-    <artifactId>multi-app</artifactId>
+    <artifactId>sb4-multi-app</artifactId>
     <version>1.17.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>orchestrator</artifactId>
-  <name>orchestrator</name>
-  <description>Spring Boot, Testcontainers and Dapr Integration Examples :: Orchestrator App</description>
+  <artifactId>sb4-worker-one</artifactId>
+  <name>sb4-worker-one</name>
+  <description>Spring Boot 4, Testcontainers and Dapr Integration Examples :: Worker 1 App</description>
 
   <dependencies>
+    <dependency>
+      <groupId>io.dapr</groupId>
+      <artifactId>worker-one</artifactId>
+      <version>${project.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
@@ -30,7 +35,7 @@
     </dependency>
     <dependency>
       <groupId>io.dapr.spring</groupId>
-      <artifactId>dapr-spring-boot-starter</artifactId>
+      <artifactId>dapr-spring-boot-4-starter</artifactId>
     </dependency>
     <dependency>
       <groupId>io.dapr.spring</groupId>
@@ -42,24 +47,6 @@
       <artifactId>testcontainers-redis</artifactId>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>io.rest-assured</groupId>
-      <artifactId>rest-assured</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <!-- Worker dependencies to ensure Maven reactor builds them before integration tests -->
-    <dependency>
-      <groupId>io.dapr</groupId>
-      <artifactId>worker-one</artifactId>
-      <version>${project.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.dapr</groupId>
-      <artifactId>worker-two</artifactId>
-      <version>${project.version}</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 
   <build>
@@ -67,16 +54,6 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>repackage</goal>
-            </goals>
-            <configuration>
-              <classifier>exec</classifier>
-            </configuration>
-          </execution>
-        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -91,23 +68,6 @@
         <configuration>
           <!-- Skip checkstyle for auto-generated code -->
           <skip>true</skip>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>integration-test</goal>
-              <goal>verify</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <includes>
-            <include>**/*IT.java</include>
-          </includes>
         </configuration>
       </plugin>
     </plugins>
