--- a/spring-boot-examples/workflows/multi-app/worker-two/pom.xml
+++ b/spring-boot-examples/workflows/multi-app/worker-two/pom.xml
@@ -62,6 +62,9 @@
             <goals>
               <goal>repackage</goal>
             </goals>
+            <configuration>
+              <classifier>exec</classifier>
+            </configuration>
           </execution>
         </executions>
       </plugin>
