--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,7 +108,7 @@ jobs:
         experimental: [ false ]
         include:
           - java: 17
-            spring-boot-version: [ 4.0.2 ]
+            spring-boot-version: 4.0.2
             spring-boot-display-version: 4.0.x
             experimental: false
     env:
