--- a/spring-boot-examples/workflows/multi-app/worker-one/pom.xml
+++ b/spring-boot-examples/workflows/multi-app/worker-one/pom.xml
@@ -54,6 +54,16 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <finalName>worker-one</finalName>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
