--- a/sdk-tests/components/pubsub.yaml
+++ b/sdk-tests/components/pubsub.yaml
@@ -10,3 +10,7 @@ spec:
     value: localhost:6379
   - name: redisPassword
     value: ""
+  - name: processingTimeout
+    value: "100ms"
+  - name: redeliverInterval
+    value: "100ms"
