exclude spring6-data from java docs as it is not compatible with Spring Boot 3.x
Signed-off-by: salaboy <Salaboy@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -663,7 +663,7 @@
           <failOnError>true</failOnError>
           <goal>site</goal>
           <notimestamp>true</notimestamp>
-          <excludePackageNames>io.dapr.examples:io.dapr.springboot:io.dapr.examples.*:io.dapr.springboot.*
+          <excludePackageNames>io.dapr.examples:io.dapr.springboot:io.dapr.examples.*:io.dapr.springboot.*:io.dapr.spring6.*
           </excludePackageNames>
         </configuration>
       </plugin>
