--- a/dapr-spring/dapr-spring-boot-starters/dapr-spring-boot-4-starter/pom.xml
+++ b/dapr-spring/dapr-spring-boot-starters/dapr-spring-boot-4-starter/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.dapr.spring</groupId>
     <artifactId>dapr-spring-parent</artifactId>
-    <version>1.18.0-SNAPSHOT</version>
+    <version>1.17.0</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
