--- a/spring-boot-examples/workflows/versioning/version-orchestrator/pom.xml
+++ b/spring-boot-examples/workflows/versioning/version-orchestrator/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.dapr</groupId>
     <artifactId>versioning</artifactId>
-    <version>1.18.0-SNAPSHOT</version>
+    <version>1.17.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
